--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1780,85 +1780,92 @@ a:hover {
   padding-top: 70px;
   padding-bottom: 20px;
 }
+@media only all and (max-width: 991px) {
+  /* line 104, ../scss/custom.scss */
+  .main-content {
+    padding-bottom: 10px;
+  }
+}
 @media only all and (max-width: 767px) {
   /* line 104, ../scss/custom.scss */
   .main-content {
     padding-top: 0px;
+    padding-bottom: 0px;
   }
 }
-/* line 112, ../scss/custom.scss */
+/* line 116, ../scss/custom.scss */
 .main-content > .container {
   padding: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 112, ../scss/custom.scss */
+  /* line 116, ../scss/custom.scss */
   .main-content > .container {
     background-color: transparent;
     padding: 0 15px;
   }
 }
-/* line 120, ../scss/custom.scss */
+/* line 124, ../scss/custom.scss */
 .main-content table, .main-content tbody, .main-content td, .main-content tr {
   border: 0 !important;
 }
 
-/* line 125, ../scss/custom.scss */
+/* line 129, ../scss/custom.scss */
 .main-content-inner {
   padding-bottom: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 128, ../scss/custom.scss */
+  /* line 132, ../scss/custom.scss */
   .main-content-inner .col-sm-6 {
     padding: 0;
   }
 }
 
-/* line 136, ../scss/custom.scss */
+/* line 140, ../scss/custom.scss */
 .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
   margin: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 136, ../scss/custom.scss */
+  /* line 140, ../scss/custom.scss */
   .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
     margin: 10px;
   }
 }
 
-/* line 143, ../scss/custom.scss */
+/* line 147, ../scss/custom.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 143, ../scss/custom.scss */
+  /* line 147, ../scss/custom.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 154, ../scss/custom.scss */
+/* line 158, ../scss/custom.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 151, ../scss/custom.scss */
+  /* line 155, ../scss/custom.scss */
   .image {
     width: 100%;
   }
-  /* line 161, ../scss/custom.scss */
+  /* line 165, ../scss/custom.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 167, ../scss/custom.scss */
+/* line 171, ../scss/custom.scss */
 .search, .error404 {
   padding: 60px;
 }
 
-/* line 171, ../scss/custom.scss */
+/* line 175, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1866,67 +1873,67 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 178, ../scss/custom.scss */
+/* line 182, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 183, ../scss/custom.scss */
+/* line 187, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 178, ../scss/custom.scss */
+  /* line 182, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 178, ../scss/custom.scss */
+  /* line 182, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 198, ../scss/custom.scss */
+/* line 202, ../scss/custom.scss */
 .fa-desktop {
   line-height: 21px;
 }
 
-/* line 201, ../scss/custom.scss */
+/* line 205, ../scss/custom.scss */
 .fa-globe {
   line-height: 19px;
 }
 
-/* line 204, ../scss/custom.scss */
+/* line 208, ../scss/custom.scss */
 .fa-responsive {
   margin-right: 5px;
 }
 
-/* line 211, ../scss/custom.scss */
+/* line 215, ../scss/custom.scss */
 .sidebar {
   padding: 10px 30px;
   margin-top: 20px;
   background-color: black;
 }
 @media only all and (max-width: 991px) {
-  /* line 211, ../scss/custom.scss */
+  /* line 215, ../scss/custom.scss */
   .sidebar {
     padding: 0;
   }
 }
-/* line 220, ../scss/custom.scss */
+/* line 224, ../scss/custom.scss */
 .sidebar h3 {
   padding: 0 0 10px;
   margin: 0 !important;
 }
-/* line 224, ../scss/custom.scss */
+/* line 228, ../scss/custom.scss */
 .sidebar .nav > li > a {
   padding: 10px 0;
 }
 
-/* line 232, ../scss/custom.scss */
+/* line 236, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
@@ -1934,7 +1941,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 243, ../scss/custom.scss */
+/* line 247, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
