--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -575,11 +575,12 @@ button {
 }
 /* line 7, ../scss/_footer.scss */
 .footer-widgets .widget {
-  border-left: 1px dashed #444;
+  height: 170px;
   padding: 0 23px;
   margin-top: 30px;
+  border-left: 1px dashed #444;
 }
-/* line 11, ../scss/_footer.scss */
+/* line 13, ../scss/_footer.scss */
 .footer-widgets .widget h2 {
   font-family: "Dosis", sans-serif !important;
   font-size: 110%;
@@ -595,30 +596,30 @@ button {
     border-left: 0;
   }
 }
-/* line 24, ../scss/_footer.scss */
+/* line 26, ../scss/_footer.scss */
 .footer-widgets .widget:first-child {
   border-left: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 27, ../scss/_footer.scss */
+  /* line 29, ../scss/_footer.scss */
   .footer-widgets .widget:last-child {
     padding: 0;
     margin-top: 0;
   }
 }
-/* line 34, ../scss/_footer.scss */
+/* line 36, ../scss/_footer.scss */
 .footer-widgets ul {
   padding: 0;
   list-style: none;
   list-style-type: none;
 }
-/* line 39, ../scss/_footer.scss */
+/* line 41, ../scss/_footer.scss */
 .footer-widgets .menu-item {
   margin: 3px 0;
   text-transform: uppercase;
   font-size: 115%;
 }
-/* line 44, ../scss/_footer.scss */
+/* line 46, ../scss/_footer.scss */
 .footer-widgets .menu-item:before {
   margin-left: 10px;
   margin-right: 5px;
@@ -626,16 +627,16 @@ button {
   color: #b12e4f;
 }
 
-/* line 54, ../scss/_footer.scss */
+/* line 56, ../scss/_footer.scss */
 #footer-menu li {
   width: 100%;
 }
 
-/* line 58, ../scss/_footer.scss */
+/* line 60, ../scss/_footer.scss */
 #root-footer, #footer {
   height: auto;
 }
-/* line 60, ../scss/_footer.scss */
+/* line 62, ../scss/_footer.scss */
 #root-footer p, #footer p {
   color: #666;
 }
@@ -1777,13 +1778,14 @@ a:hover {
 
 /* line 104, ../scss/custom.scss */
 .main-content {
-  padding-top: 70px;
-  padding-bottom: 20px;
+  padding-top: 90px;
+  padding-bottom: 10px;
 }
 @media only all and (max-width: 991px) {
   /* line 104, ../scss/custom.scss */
   .main-content {
-    padding-bottom: 10px;
+    padding-top: 70px;
+    padding-bottom: 0px;
   }
 }
 @media only all and (max-width: 767px) {
@@ -1793,79 +1795,79 @@ a:hover {
     padding-bottom: 0px;
   }
 }
-/* line 116, ../scss/custom.scss */
+/* line 117, ../scss/custom.scss */
 .main-content > .container {
   padding: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 116, ../scss/custom.scss */
+  /* line 117, ../scss/custom.scss */
   .main-content > .container {
     background-color: transparent;
     padding: 0 15px;
   }
 }
-/* line 124, ../scss/custom.scss */
+/* line 125, ../scss/custom.scss */
 .main-content table, .main-content tbody, .main-content td, .main-content tr {
   border: 0 !important;
 }
 
-/* line 129, ../scss/custom.scss */
+/* line 130, ../scss/custom.scss */
 .main-content-inner {
   padding-bottom: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 132, ../scss/custom.scss */
+  /* line 133, ../scss/custom.scss */
   .main-content-inner .col-sm-6 {
     padding: 0;
   }
 }
 
-/* line 140, ../scss/custom.scss */
+/* line 141, ../scss/custom.scss */
 .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
   margin: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 140, ../scss/custom.scss */
+  /* line 141, ../scss/custom.scss */
   .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
     margin: 10px;
   }
 }
 
-/* line 147, ../scss/custom.scss */
+/* line 148, ../scss/custom.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 147, ../scss/custom.scss */
+  /* line 148, ../scss/custom.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 158, ../scss/custom.scss */
+/* line 159, ../scss/custom.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 155, ../scss/custom.scss */
+  /* line 156, ../scss/custom.scss */
   .image {
     width: 100%;
   }
-  /* line 165, ../scss/custom.scss */
+  /* line 166, ../scss/custom.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 171, ../scss/custom.scss */
+/* line 172, ../scss/custom.scss */
 .search, .error404 {
   padding: 60px;
 }
 
-/* line 175, ../scss/custom.scss */
+/* line 176, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1873,67 +1875,67 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 182, ../scss/custom.scss */
+/* line 183, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 187, ../scss/custom.scss */
+/* line 188, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 182, ../scss/custom.scss */
+  /* line 183, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 182, ../scss/custom.scss */
+  /* line 183, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 202, ../scss/custom.scss */
+/* line 203, ../scss/custom.scss */
 .fa-desktop {
   line-height: 21px;
 }
 
-/* line 205, ../scss/custom.scss */
+/* line 206, ../scss/custom.scss */
 .fa-globe {
   line-height: 19px;
 }
 
-/* line 208, ../scss/custom.scss */
+/* line 209, ../scss/custom.scss */
 .fa-responsive {
   margin-right: 5px;
 }
 
-/* line 215, ../scss/custom.scss */
+/* line 216, ../scss/custom.scss */
 .sidebar {
   padding: 10px 30px;
   margin-top: 20px;
   background-color: black;
 }
 @media only all and (max-width: 991px) {
-  /* line 215, ../scss/custom.scss */
+  /* line 216, ../scss/custom.scss */
   .sidebar {
     padding: 0;
   }
 }
-/* line 224, ../scss/custom.scss */
+/* line 225, ../scss/custom.scss */
 .sidebar h3 {
   padding: 0 0 10px;
   margin: 0 !important;
 }
-/* line 228, ../scss/custom.scss */
+/* line 229, ../scss/custom.scss */
 .sidebar .nav > li > a {
   padding: 10px 0;
 }
 
-/* line 236, ../scss/custom.scss */
+/* line 237, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
@@ -1941,7 +1943,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 247, ../scss/custom.scss */
+/* line 248, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
