--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -5,9 +5,11 @@
         margin-top: 0px;
     }
     .widget {
-        border-left: 1px dashed #444;
+        height: 170px;
         padding: 0 23px;
         margin-top: 30px;
+        border-left: 1px dashed #444;
+
         h2 {
             font-family: "Dosis", sans-serif !important;
             font-size: 110%;
