--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -993,12 +993,12 @@ section .col-sm-5, section .col-md-6 {
 @media only all and (max-width: 767px) {
   /* line 42, ../scss/_thumbs.scss */
   .thumbnail img {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-    opacity: 0.7;
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=45);
+    opacity: 0.45;
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     filter: grayscale(100%);
-    border: 3px dotted #b12e4f;
+    border: 3px dotted #666;
     width: 100% !important;
   }
 }
